--- a/cool.html
+++ b/cool.html
@@ -15,7 +15,7 @@
 
        <form action="action_page.php" method="post">
         <div class="imgcontainer">
-          <img src="cool_pakskhjaksjashoto.jpg" alt="NSS IIT" class="NSS IIT">
+          <img src="cool_photo.jpg" alt="NSS IIT" class="NSS IIT">
         </div>
       
         <div class="container">
